# vasvscrapper

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package.json  pyproject.toml  release.sh  scripts.py  setup.sh
.github/: labeler.yml
.github/workflows/: greetings.yml  release.yml
tests/: test_vasvscrapper.py
tests/attendance/: attendance_const.py  test_attendance.py
tests/login/: login_consts.py  test_login_scrapper.py
tests/news/: news_consts.py  test_news.py
tests/results/: result_consts.py  test_results.py
vasvscrapper/: __init__.py  scripts.py
vasvscrapper/attendance/: __init__.py  get_attendance.py
vasvscrapper/attendance/utilities/: __init__.py  attendance_scrapper.py  curate_attendance.py  merge_attendance.py
vasvscrapper/enums/: __init__.py  scrapper_enums.py
vasvscrapper/login/: __init__.py  login_student.py
vasvscrapper/login/utilities/: __init__.py  login_scrapper.py
vasvscrapper/network_requests/: __init__.py  async_requests.py
vasvscrapper/news/: __init__.py  news_scrapper.py
vasvscrapper/news/utilities/: __init__.py  news_scrapper.py
vasvscrapper/results/: __init__.py  get_result.py
vasvscrapper/results/utilities/: __init__.py  result_scrapper.py
vasvscrapper/status_codes/: __init__.py  attendance.py  login.py  news.py  results.py
