[tool.poetry]
name = "vasvscrapper"
version = "0.0.2-alpha.9"
description = "A python package for the-vasv-deets project to extract information from vce.ac.in."
readme = "README.md"
authors = ["P. Soumith Reddy <soumithreddypodduturi@gmail.com>"]

homepage = "https://pypi.org/project/vasvscrapper/"
repository = "https://github.com/soumith2105/vasvscrapper/"

keywords = ["webscraping", "vasavi"]

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
bs4 = "^0.0.1"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
flake8 = "^3.9.2"
toml = "^0.10.2"
pre-commit = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
^/package.json
^/runserver.sh
'''

[tool.poetry.scripts]
lint = 'vasvscrapper.scripts:lint'
test = 'vasvscrapper.scripts:test'
release = 'vasvscrapper.scripts:release'
